<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF5ED"
    android:id="@+id/contact_scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Story-->
        <TextView
            android:id="@+id/our_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/green"
            android:fontFamily="@font/kirang_haerang"
            android:text="@string/our_story"
            android:textColor="#3C3C3C"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/all_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/nona"
            android:textColor="#3C3C3C"
            android:textSize="16sp" />

        <!-- Where to find -->
        <TextView
            android:id="@+id/where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/green"
            android:fontFamily="@font/kirang_haerang"
            android:text="@string/where_to_find_us"
            android:textColor="#3C3C3C"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/times"
            android:textColor="#3C3C3C"
            android:textSize="16sp" />

        <!--Reservevation -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reserve"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:background="@color/green"
            android:fontFamily="@font/kirang_haerang"
            android:text="@string/reserve_a_table"
            android:textColor="#3C3C3C"
            android:textSize="26sp" />

        <!-- Seats -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seats_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/number_of_seats"
                android:textColor="#3C3C3C"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/seats_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#D97474"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <SeekBar
            android:id="@+id/seats_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:max="9"
            android:progress="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/payment_method"
            android:textColor="#3C3C3C"
            android:textSize="16sp" />
        <!-- Payment -->
        <RadioGroup
            android:id="@+id/payment_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textColor="#3C3C3C">

            <RadioButton
                android:id="@+id/radio_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/cash"
                android:textColor="#3C3C3C" />

            <RadioButton
                android:id="@+id/radio_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/card"
                android:textColor="#3C3C3C" />

            <RadioButton
                android:id="@+id/radio_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app"
                android:textColor="#3C3C3C" />
        </RadioGroup>

        <!-- Reservation time -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/select_time"
            android:textColor="#3C3C3C"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/time_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:numbersSelectorColor="@color/black"
            android:textColor="@color/black"
            android:timePickerMode="spinner" />

        <!-- Vegan ? -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/vegan_meal"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/vegan_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Submit Button -->
        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#89A784"
            android:padding="12dp"
            android:text="@string/reserve_seats"
            android:textColor="#3C3C3C" />
        <!--Rate-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFE3B3"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_our_website"
                android:fontFamily="@font/kirang_haerang"
                android:textSize="20sp"
                android:paddingBottom="20dp"/>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:scaleX="1.3"
                android:scaleY="1.3"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>