<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="2dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:background="#FFF2D8">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dish_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_name"
                android:textSize="18sp"
                 />

            <TextView
                android:id="@+id/dish_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="14sp"
                android:textColor="#777777"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/dish_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F44336"
                android:text="@string/_12"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="101dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pic"
            android:scaleType="centerCrop"
            android:src="@drawable/pasta_rose" />
    </LinearLayout>

</androidx.cardview.widget.CardView>